Document the binding table and the prepare() rejection
Records why Raw#prepare(ClientState) is not a way out of the reflection,
with the evidence, so it is settled rather than re-litigated.